# google-play-epaper

./: README.md  platformio.ini
include/: lv_conf.h
src/: main.cpp
src/ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.h  ui_helpers.c  ui_helpers.h
src/ui/components/: ui_comp_hook.c
src/ui/images/: ui_img_1214273956.c  ui_img_1475871244.c  ui_img_1644947644.c  ui_img_190695247.c  ui_img_1_png.c  ui_img_2_png.c  ui_img_997471977.c  ui_img_wallpaper_1_png.c
src/ui/screens/: ui_Screen1.c
